--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "pydantic>=2.12.3",
     "pytest>=8.4.2",
     "ruff>=0.14.1",
+    "sqlalchemy>=2.0.44",
 ]
 
 [build-system]
